feat : 참여자 수 조회 기능 구현
리스트 조회에 참여자 수 조회 기능 구현