@@ -1,17 +1,18 @@
 package com.example.surveyapi.domain.survey.application;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.example.surveyapi.domain.statistic.application.client.ParticipationServicePort;
+import com.example.surveyapi.domain.survey.application.client.ParticipationPort;
 import com.example.surveyapi.domain.survey.application.response.SearchSurveyDtailResponse;
 import com.example.surveyapi.domain.survey.application.response.SearchSurveyTitleResponse;
 import com.example.surveyapi.domain.survey.domain.query.QueryRepository;
 import com.example.surveyapi.domain.survey.domain.query.dto.SurveyDetail;
+import com.example.surveyapi.domain.survey.domain.query.dto.SurveyTitle;
 import com.example.surveyapi.global.enums.CustomErrorCode;
 import com.example.surveyapi.global.exception.CustomException;
 
@@ -22,7 +23,7 @@ import lombok.RequiredArgsConstructor;
 public class SurveyQueryService {
 
 	private final QueryRepository surveyQueryRepository;
-	private final ParticipationServicePort port;
+	private final ParticipationPort port;
 
 	//TODO 질문(선택지) 표시 순서 정렬 쿼리 작성
 	@Transactional(readOnly = true)
@@ -34,20 +35,16 @@ public class SurveyQueryService {
 	}
 
 	//TODO 참여수 연산 기능 구현 필요 있음
-	// @Transactional(readOnly = true)
-	// public List<SearchSurveyTitleResponse> findSurveyByProjectId(String authHeader, Long projectId, Long lastSurveyId) {
-	//
-	// 	List<Long> surveyIds = new ArrayList<>();
-	//
-	// 	for (int i = lastSurveyId.intValue(); i > lastSurveyId.intValue() - 10; i--) {
-	// 		surveyIds.add((long)i);
-	// 	}
-	//
-	// 	//Map<Long, Integer> infos = port.getParticipationInfos(authHeader, surveyIds);
-	//
-	// 	return surveyQueryRepository.getSurveyTitles(projectId, lastSurveyId)
-	// 		.stream()
-	// 		.map(response -> SearchSurveyTitleResponse.from(response, infos.get(response.getSurveyId())))
-	// 		.toList();
-	// }
+	@Transactional(readOnly = true)
+	public List<SearchSurveyTitleResponse> findSurveyByProjectId(String authHeader, Long projectId, Long lastSurveyId) {
+
+		List<SurveyTitle> surveyTitles = surveyQueryRepository.getSurveyTitles(projectId, lastSurveyId);
+		List<Long> surveyIds = surveyTitles.stream().map(SurveyTitle::getSurveyId).collect(Collectors.toList());
+		Map<String, Integer> partCounts = port.getParticipationCounts(authHeader, surveyIds).getSurveyPartCounts();
+
+		return surveyTitles
+			.stream()
+			.map(response -> SearchSurveyTitleResponse.from(response, partCounts.get(response.getSurveyId().toString())))
+			.toList();
+	}
 } 
